Implemented Auth using api keys
