# app/controllers/api/v1/base_controller.rb
@@ -1,0 +1,13 @@
+# frozen_string_literal: true
+
+module Api
+  module V1
+    class BaseController < ActionController::Base
+      include ApiKeyAuthenticatable
+      include ErrorHandling
+
+      skip_before_action :verify_authenticity_token
+      before_action :authenticate_api_key!
+    end
+  end
+end
